# pcc-spring-2025

./: .gitignore
Brain Visualizer/: CMakeLists.txt  CONTRIBUTORS.md  LICENSE.txt  README.md
Brain Visualizer/include/analysis/: batch_analyzer.hpp
Brain Visualizer/include/data/: interface.hpp  json_file_source.hpp  streaming_source.hpp
Brain Visualizer/include/electrode/: electrode.hpp  electrode_set.hpp  electrode_system.hpp
Brain Visualizer/include/event/: event_system.hpp
Brain Visualizer/include/logging/: logger.hpp
Brain Visualizer/include/ui/: electrode_frame.hpp  electrode_renderer.hpp  electrode_visualization.hpp  frequency_band_selector.hpp
Brain Visualizer/include/ui/detail/: electrode_state_manager.hpp
Brain Visualizer/include/utils/: compiler.hpp  visualization_utils.hpp
Brain Visualizer/res/fonts/: roboto-regular.hpp
Brain Visualizer/src/: CMakeLists.txt  imgui_basic.cpp  main.cpp  ui.cpp
Brain Visualizer/src/analysis/: batch_analyzer.cpp
Brain Visualizer/src/data/: json_file_source.cpp  streaming_source.cpp
Brain Visualizer/src/ui/: electrode_frame.cpp  electrode_renderer.cpp  frequency_band_selector.cpp
Brain Visualizer/src/ui/detail/: electrode_state_manager.cpp
Brain Visualizer/src/utils/: visualization_utils.cpp
Cybersecurity of BCIs/: CollabAes.ipynb  README.md
Cybersecurity of BCIs/AesProject/: Intro to RSA.docx
Cybersecurity of BCIs/AesProject/Aes Implementaion/: aes_module.py  main.py
Signal Processing Techniques/: 2025-04-04 STATUS REPORT.pptx  README.md  logicDesign.txt  main.py  neuronClass.py
